--- a/Root/tema1.html
+++ b/Root/tema1.html
@@ -27,7 +27,7 @@
             <header>
                 <hgroup>
                     <!--título del artículo-->
-                    <h2> Inspiración </h2>
+                    <h2> Naturaleza e Ingeniería</h2>
                     <!--fecha-->
                     <h4> 09/11/21 </h4>
                 </hgroup>
@@ -36,7 +36,17 @@
 
             <div>
                 <h3> Contexto </h3>
-                <p> contenido </p> <!--aquí va lo que vas a decir-->
+
+                <p> Quiero compartir un tema que me llama mucho la atención, la ingeniería. La ingeniería es el arte y técnica de aplicar los conocimientos científicos a la invención, diseño, perfeccionamiento y manejo de nuevos procedimientos en la industria y otros campos de aplicación científicos. En este caso quiero hablar espcíficamente de casos en los que han surgido proyectos en los que el ingeniero se inspiró en la naturaleza o en algún concepto o conocimiento que surgió a partir de ella y que posteriormente se utilizó para crear algo.</p> <!--aquí va lo que vas a decir-->
+
+                <h3> Desarrollo </h3>
+
+                <p> En esta primer entrega del blog quiero hablar de la historia del cómo se diseño el caza Mitsubishi A6M Zero. Mitsubishi A6M Zero (o Zeke): fue un avión de caza de combate embarcado japonés, que voló tanto para el ejército imperial, como para el servicio aéreo de la marina imperial, durante la Segunda Guerra Mundial. El Mitsubishi A6M zero era un avión que inicialmente sorprendió a los pilotos aliados que combatieron contra él en el océano pacífico. Inicialmente la versión A6M2 montaba un motor de pocos kilovatios para las potencias manejadas por aviones de caza de esos años. Sin embargo era un avión muy ligero y por tanto su relación potencia a peso era excelente.
+                    El Zero, cuyo primer vuelo tuvo lugar en 1939, era extremadamente ágil y ligero, con una maniobrabilidad y autonomía superiores a cualquier otro caza del mundo en su época.​ El Zero fue superior a todos los cazas aliados durante los primeros dos años de la guerra.​ Sin embargo, para lograr estos resultados, los ingenieros japoneses tuvieron que sacrificar la durabilidad. El Zero poseía una construcción muy ligera, carecía de blindaje y tanque de combustible autosellante. Según el escritor estadounidense Jim Rearden, «el Zero era probablemente el avión más fácil de derribar cuando era dañado... Los japoneses... no estaban preparados o no eran capaces de construir cazas más avanzados en la cantidad requerida para lidiar con el creciente número y calidad de los cazas estadounidenses».​ Como resultado, el Zero fue el caza principal de la Armada Imperial Japonesa en la guerra, durante la cual solo se fabricaron aproximadamente 10 500 unidades. </p> <!--aquí va lo que vas a decir-->
+
+                <h3> Motivación</h3>
+
+                <p> Me llaman mucho la atención los fenómenos físicos y la idea de poder tomar a la naturaleza como inspiración para consttruir y diseñar objetos útiles, por eso elegí este tema.</p> <!--aquí va lo que vas a decir-->
             </div>
             <!--termina contenido del artículo-->
 
