--- a/Root/tema1.html
+++ b/Root/tema1.html
@@ -38,7 +38,7 @@
             <header>
                 <hgroup>
                     <!--título del artículo-->
-                    <h2> Naturaleza e Ingeniería</h2>
+                    <h2> <img src= "Root/Assets/Images/Arbol" alt="Arbol" height="auto" width="auto"> Naturaleza e Ingeniería</h2>
                     <!--fecha-->
                     <h4> 09/11/21 </h4>
                 </hgroup>
