--- a/Root/tema2.html
+++ b/Root/tema2.html
@@ -16,7 +16,7 @@
 
     <header>
 
-        <h1> <img src= "Root/Assets/Images/Langosta" alt="Langosta" height="auto" width="auto"> Naturaleza, Biomimética e ingeniería</h1>
+        <h1> <img src= "Root/Assets/Images/Langosta.jpg" alt="Langosta" height="auto" width="auto"> Naturaleza, Biomimética e ingeniería</h1>
 
     </header> <!-- termina el título de mi blog-->
 
