--- a/Root/tema1.html
+++ b/Root/tema1.html
@@ -27,7 +27,7 @@
 
     <header>
 
-        <h1> <img src= "Root/Assets/Images/Arbolessingapur.jpg" alt="love" height="auto" width="auto">Naturaleza, Biomimética e ingeniería</h1>
+        <h1> <img src= "Root/Assets/Images/ArbolTelaraña.jpg" alt="love" height="auto" width="auto">Naturaleza, Biomimética e ingeniería</h1>
 
     </header> <!-- termina el título de mi blog-->
 
@@ -37,7 +37,7 @@
             <header>
                 <hgroup>
                     <!--título del artículo-->
-                    <h2> <img src= "Root/Assets/Images/Arbol" alt="Arbol" height="auto" width="auto"> Naturaleza e Ingeniería</h2>
+                    <h2> <img src= "Root/Assets/Images/Colibri.jpg" alt="Arbol" height="auto" width="auto"> Naturaleza e Ingeniería</h2>
                     <!--fecha-->
                     <h4> 09/11/21 </h4>
                 </hgroup>
@@ -50,7 +50,7 @@
                 <p> Quiero compartir un tema que me llama mucho la atención, la ingeniería. La ingeniería es el arte y técnica de aplicar los conocimientos científicos a la invención, diseño, perfeccionamiento y manejo de nuevos procedimientos en la industria y otros campos de aplicación científicos. En este caso quiero hablar espcíficamente de casos en los que han surgido proyectos en los que el ingeniero se inspiró en la naturaleza o en algún concepto o conocimiento que surgió a partir de ella y que posteriormente se utilizó para crear algo.</p> <!--aquí va lo que vas a decir-->
                 
                 <figure>
-                    <img src=”Root/Assests/Images/Gustos.jpg alt=”cerebro” height=”auto” width=”auto”>
+                    <img src=”Root/Assests/Images/Dienteleon.jpg alt=”cerebro” height=”auto” width=”auto”>
                     <figcaption>  Texto de descrición </figcaption>
                 </figure>
                     
@@ -70,7 +70,7 @@
                     El Zero, cuyo primer vuelo tuvo lugar en 1939, era extremadamente ágil y ligero, con una maniobrabilidad y autonomía superiores a cualquier otro caza del mundo en su época. El Zero fue superior a todos los cazas aliados durante los primeros dos años de la guerra. Sin embargo, para lograr estos resultados, los ingenieros japoneses tuvieron que sacrificar la durabilidad. El Zero poseía una construcción muy ligera, carecía de blindaje y tanque de combustible autosellante. Según el escritor estadounidense Jim Rearden, «el Zero era probablemente el avión más fácil de derribar cuando era dañado... Los japoneses... no estaban preparados o no eran capaces de construir cazas más avanzados en la cantidad requerida para lidiar con el creciente número y calidad de los cazas estadounidenses». Como resultado, el Zero fue el caza principal de la Armada Imperial Japonesa en la guerra, durante la cual solo se fabricaron aproximadamente 10 500 unidades. </p> <!--aquí va lo que vas a decir-->
 
                     <figure>
-                        <img src=”Root/Assests/Images/Zero.jpg alt=”Avion” height=”auto” width=”auto”>
+                        <img src=”Root/Assests/Images/Edificio.jpg alt=”Avion” height=”auto” width=”auto”>
                         <figcaption>  Texto de descrición </figcaption>
                     </figure>
 
@@ -85,7 +85,7 @@
                 <h3> Motivación</h3>
 
                 <figure>
-                    <img src=”Root/Assests/Images/analisis_estructural.jpg alt=”estructura” height=”auto” width=”auto”>
+                    <img src=”Root/Assests/Images/Estructura.jpg alt=”estructura” height=”auto” width=”auto”>
                     <figcaption>  Texto de descrición </figcaption>
                 </figure>
 
