--- a/Root/tema2.html
+++ b/Root/tema2.html
@@ -8,6 +8,8 @@
     Naturaleza
     </title>
 
+    <link rel="stylesheet" href="assets/styles/estilos_rodrigo_espinosa.css">
+
 </head>
 
     <body> <!-- Aquí va lo que se muestra en el documento/empieza mi blog-->
@@ -16,7 +18,7 @@
 
     <header>
 
-        <h1> <img src= "Root/Assets/Images/Fractal.jpg" alt="Langosta" height="auto" width="auto"> Naturaleza, Biomimética e ingeniería</h1>
+        <h1> <img src= "Assets/Images/Fractal.jpg" alt="Langosta" height="auto" width="auto"> Naturaleza, Biomimética e ingeniería</h1>
 
     </header> <!-- termina el título de mi blog-->
 
@@ -26,7 +28,7 @@
             <header>
                 <hgroup>
                     <!--título del artículo-->
-                    <h2> <img src= "Root/Assets/Images/FrutaDeDragón.jpg" alt="ingeniero" height="auto" width="auto"> Naturaleza e Ingeniería</h2>
+                    <h2> <img src= "Assets/Images/FrutaDeDragón.jpg" alt="ingeniero" height="auto" width="auto"> Naturaleza e Ingeniería</h2>
                     <!--fecha-->
                     <h4> 09/11/21 </h4>
                 </hgroup>
@@ -37,7 +39,7 @@
                 <h3> Contexto </h3>
 
                 <figure>
-                    <img src=”Root/Assests/Images/Hormiga.jpg alt=”Billar” height=”auto” width=”auto”>
+                    <img src="Assests/Images/Hormiga.jpg" alt=”Billar” height=”auto” width=”auto”>
                     <figcaption>  Texto de descrición </figcaption>
                 </figure>
 
@@ -56,7 +58,7 @@
                 <h3> Desarrollo </h3>
 
                 <figure>
-                    <img src=”Root/Assests/Images/Picos.jpg alt=”Caza” height=”auto” width=”auto”>
+                    <img src="Assests/Images/Picos.jpg" alt=”Caza” height=”auto” width=”auto”>
                     <figcaption>  Texto de descrición </figcaption>
                 </figure>
 
@@ -76,7 +78,7 @@
                 <h3> Motivación</h3>
 
                 <figure>
-                    <img src=”Root/Assests/Images/Salon.jpg alt=”Structure” height=”auto” width=”auto”>
+                    <img src="Assests/Images/Salon.jpg" alt=”Structure” height=”auto” width=”auto”>
                     <figcaption>  Texto de descrición </figcaption>
                 </figure>
 
