--- a/Root/tema1.html
+++ b/Root/tema1.html
@@ -87,7 +87,7 @@
                 <h3> Motivación</h3>
 
                 <figure>
-                    <img src="Assests/Images/Estructura.jpg" alt=”estructura” height=”auto” width=”auto”>
+                    <img src="Assests/Images/Estructura.jpg" alt="loop" height=”auto” width=”auto”>
                     <figcaption>  Texto de descrición </figcaption>
                 </figure>
 
