--- a/Root/tema1.html
+++ b/Root/tema1.html
@@ -52,7 +52,7 @@
                 <p> Quiero compartir un tema que me llama mucho la atención, la ingeniería. La ingeniería es el arte y técnica de aplicar los conocimientos científicos a la invención, diseño, perfeccionamiento y manejo de nuevos procedimientos en la industria y otros campos de aplicación científicos. En este caso quiero hablar espcíficamente de casos en los que han surgido proyectos en los que el ingeniero se inspiró en la naturaleza o en algún concepto o conocimiento que surgió a partir de ella y que posteriormente se utilizó para crear algo.</p> <!--aquí va lo que vas a decir-->
                 
                 <figure>
-                    <img src="Assests/Images/Dienteleon.jpg" alt=”cerebro” height=”auto” width=”auto”>
+                    <img src="Assests/Images/Dienteleon.jpg" alt="paracaídas" height=”auto” width=”auto”>
                     <figcaption>  Texto de descrición </figcaption>
                 </figure>
                     
