--- a/Root/index.html
+++ b/Root/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+
     <meta charset="utf-8">
 
-    <title>
-        ABC
-    </title>
+    <title> El BLog del Mundo </title>
 
-    </head>
+</head>
 
-    <body>
+    
+<body>
+
 Cosas de la vida
-    </body>
+
+    
+</body>
 
 </html>     
