--- a/Root/propuestas.html
+++ b/Root/propuestas.html
@@ -1,45 +1,346 @@
 <!DOCTYPE html>
-<html lang="en"> <!-- Empieza párrafo -->
+
+<html lang="es"> <!-- Empieza párrafo -->
+
     <head> <!-- Empieza párrafo -->
+
         <meta charset="utf-8">
-    <title> <!-- Empieza párrafo -->
-    </title> <!-- Termina párrafo -->
+
+    <title> <!-- Empieza párrafo --> Mi tema  </title> <!-- Termina párrafo -->
+
     </head> <!-- Termina párrafo -->
+
+
     <body> <!-- Empieza párrafo -->
-<!-- Tema 1 de Rodrigo Espinosa-->
-<hgroup>
-    <h1>Energías limpias</h1>
-    <h3>¿Porqué es importante eliminar las formas de produicción de energía convencionales?</h3>
-    <h3>Testimonios de personas</h3>
-</hgroup>
-<p>Durante los últimos años el cambio climático a aumnetado drásticamente generando muchos problemas</p>
-<!--Fin del Tema 1-->
-<!-- Tema 2 de Rodrigo Espinosa-->
-<hgroup>
-    <h1>Naturaleza como inspiración para el hombre</h1>
-    <h3>Historia de cómo el hombre se ha visto influenciado por la naturaleza al momento de hacer sus creaciones</h3>
-    <h3>Hoy en día ¿Seguimos tomando a la naturalerza como inspiracióm?</h3>
-    <h3>¿Qué podemos hacer al respecto?</h3>
-</hgroup>
-<p>Condidero importante que se comience a retomar esta práctica de tomar a la naturaleza como inspiración y así generar más conciencia sobre ella</p>
-<!--Fin del Tema 2-->
 
-<!-- Tema 1 de Daniel Ramirez-->
-<hgroup>
-    <h1>Ronaldinho, el mejor jugador de la historia</h1>
-    <h3>Dribbles y técnica individual</h3>
-    <h3>Juego en equipo, construcción de jugadas</h3>
-    <h3>Maestro de Messi</h3>
-</hgroup>
-<!-- Fin del tema 2-->
+<!--inicia barra de navegación-->
 
-<!-- Tema 2 de Daniel Ramirez-->
+        <nav>
+            <ul>
+
+                <li><a href="index.html" target="_blank"> Principal </a> </li>
+
+                <li><a href="tema1.html"></a></li>
+
+                <li><a href="tema2.html"></a></li>
+
+            </ul>
+        </nav>
+
+
+<!--termina barra de navegación-->
+
+<!--empieza mi blog-->
+<section>
+
+<!--empieza el encabezado del blog-->
+
+<header>
+
+    <h1> Energías limpias </h1>
+
+</header>
+
+<!--termina el encabezado de mi blog-->
+
+<!--empieza contenido principal-->
+
+<main>
+    
+    <!--inicio de entrada: introducción a mi tema-->
+
+    <article>
+
+        <header> 
+
+            <hgroup>
+
+                <h2> <img src="Assets/Images/ArbolTelaraña.jpg" alt="love" height="auto" width="auto">Naturaleza, Biomimética e ingeniería </h2>
+
+                <!--fecha en la que se escribió el artículo-->
+
+                <h4> 09/11/21 </h4>
+
+            </hgroup>
+
+        </header>
+
+<!--inicia contenido del artículo-->
+
+        <div> 
+
+            <h3>Contexto</h3>
+
+                    <p>
+                        a
+                    </p>
+
+            <h3>Desarrollo</h3>
+
+                    <p>
+                        a
+                    </p>
+
+            <h3>Investigación</h3>
+
+                    <p>
+                        a
+                    </p>
+
+            <h3>Motivación</h3>
+
+                    <p>
+                        a
+                    </p>
+
+            <!--inicia la ilustración del artículo-->
+
+            <figure>
+                <img src="https://www.ecured.cu/%C3%81rbol#/media/File:%C3%81rboll.jpg" alt="Arbol8" height="auto" width="auto">
+                <figcaption>Texto de descripción de mi ilustración.</figcaption>
+            </figure>
+        </div>
+
+<!--termina conteido del artículo-->
+
+        <footer>
+             <!-- Datos del autor -->
+            <div>
+                <span>Nombre del autor</span> <a href="https://www.instagram.com/rodrigo_espinosaq/" target="_blank">@rodrigo.espinosaq</a>
+            </div>
+                <!-- fin datos del autor -->
+                 <!-- bibliografía -->
+                <blockquote>
+                    <p>Cita correctamente hecha.</p>
+                </blockquote>
+            <!-- fin bibliografía -->
+        </footer>
+
+    </article>
+
+<!--inicia entrada:ranking-->
+
+    <article>
+
+        <ol reversed>
+            <li>elemento 1</li>
+            <li>elemento 2</li>
+            <li>elemento 3</li>
+            <li>elemento 4</li>
+            <li>elemento 5</li>
+            <li>elemento 6</li>
+            <li>elemento 7</li>
+            <li>elemento 8</li>
+            <li>elemento 9</li>
+            <li>elemento 10</li>
+        </ol>
+        <!-- Termina mi ranking en orden inverso -->
+
+            <p>
+                a
+            </p>
+
+    </article>
+
+<!-- inicia ilustración del artículo -->
+<figure>
+    <img src="" alt="ilustracion  artículo" height="auto" width="auto">
+    <figcaption>Texto de descripción de mi ilustración.</figcaption>
+</figure>
+<!-- termina ilustración del artículo -->
+</div>
+<!-- Termina contenido del artículo -->
+<footer>
+<!-- Datos del autor -->
+<div>
+    <span>Nombre del autor</span> <a href="https://www.instagram.com/rodrigo_espinosaq/" target="_blank">@rodrigo.espinosaq</a>
+</div>
+<!-- fin datos del autor -->
+<!-- bibliografía -->
+<blockquote>
+    <p>Cita correctamente hecha.</p>
+</blockquote>
+<!-- fin bibliografía -->
+</footer>
+</article>
+<!-- fin entrada: ranking -->
+
+<!-- inicia entrada: sitios oficiales -->
+<article>
+<header>
 <hgroup>
-    <h1>Música como método de aprendizaje</h1>
-    <h3>Desarrollo del intelecto de la persona a través de la música</h3>
-    <h3>Desarrollo de razonamiento abstracto</h3>
-    <h3>Desarrollo de motricidad y coordinación</h3>
+    <!-- Título del artículo -->
+    <h2> <img src="" alt="Texto descriptivo de la imagen" height="" width="auto"> Sitios oficiales ejemplo</h2>
+    <!-- Fecha en la que se escribió el artículo -->
+    <h4>dd/mes/aa</h4>
 </hgroup>
-<!-- Fin del tema 2-->
-    </body> <!-- Termina párrafo -->
-</html> <!-- Termina párrafo -->
+</header>
+<!-- inicia contenido del artículo -->
+<div>
+<!-- Empieza mi lista de sitios oficiales -->
+<ul>
+    <li><a href="" target="_blank">sitio oficial de ejemplo 1</a></li>
+    <li><a href="" target="_blank">sitio oficial de ejemplo 2</a></li>
+    <li><a href="" target="_blank">sitio oficial de ejemplo 3</a></li>
+    <li><a href="" target="_blank">sitio oficial de ejemplo 4</a></li>
+    <li><a href="" target="_blank">sitio oficial de ejemplo 5</a></li>
+</ul>
+<!-- Termina mi lista de sitios oficiales -->
+
+<p>
+    a
+</p>
+<!-- inicia ilustración del artículo -->
+<figure>
+    <img src="" alt="ilustracion  artículo" height="auto" width="auto">
+    <figcaption>Texto de descripción de mi ilustración.</figcaption>
+</figure>
+<!-- termina ilustración del artículo -->
+</div>
+<!-- Termina contenido del artículo -->
+<footer>
+ <!-- Datos del autor -->
+ <div>
+    <span>Nombre del autor</span> <a href="https://www.instagram.com/rodrigo_espinosaq/" target="_blank">@rodrigo.espinosaq</a>
+</div>
+<!-- fin datos del autor -->
+<!-- bibliografía -->
+<blockquote>
+    <p>Cita correctamente hecha.</p>
+</blockquote>
+<!-- fin bibliografía -->
+</footer>
+</article>
+<!-- fin entrada: sitios oficiales -->
+
+<!-- inicia entrada: video de youtube -->
+<article>
+<header>
+<hgroup>
+    <!-- Título del artículo -->
+    <h2> <img src="" alt="Descripción del ícono" height="auto" width="auto"> Video de Youtube</h2>
+    <!-- Fecha en la que se escribió el artículo -->
+    <h4>dd/mes/aa</h4>
+</hgroup>
+</header>
+<!-- inicia contenido del artículo -->
+<div>
+
+<!-- inicia video  -->
+<figure>
+    <iframe width="560" height="315" src="" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <figcaption>¡No lo hagan!</figcaption>
+</figure>
+<!-- termina Video-->
+
+<!-- inician párrafos adicionales -->
+<p>
+    a
+</p>
+<p>
+    a
+</p>
+<!-- Terminan párrafos adicionales -->
+</div>
+<!-- Termina contenido del artículo -->
+<footer>
+<!-- Datos del autor -->
+<div>
+    <span>Nombre del autor</span> <a href="https://www.instagram.com/rodrigo_espinosaq/" target="_blank">@rodrigo.espinosaq</a>
+</div>
+<!-- fin datos del autor -->
+<!-- bibliografía -->
+<blockquote>
+    <p>Cita correctamente hecha.</p>
+</blockquote>
+<!-- fin bibliografía -->
+</footer>
+</article>
+<!-- fin entrada: video youtube -->
+
+<!-- inicia entrada: investigación -->
+<article>
+<header>
+<hgroup>
+    <!-- Título del artículo con ícono -->
+    <h2> <img src="" alt="Descripción del ícono" height="auto" width="auto"> Investigación</h2>
+    <!-- Fecha en la que se escribió el artículo -->
+    <h4>dd/mes/aa</h4>
+</hgroup>
+</header>
+<!-- inicia contenido del artículo -->
+<div>
+
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid exercitationem odio in. Corporis sed optio fugiat odit, culpa impedit dicta ea tempora, consectetur quidem quasi omnis voluptatum sint magni molestiae praesentium veniam, quo earum inventore quam.
+    <strong>Cupiditate, odio! Sequi nostrum quia totam doloremque odio dolores</strong>, <q>illum iste mollitia quo est earum eius et ea id fugit repellendus laborum quod tempore dolorum?</q> <cite>--Dolores doloremque</cite> consectetur sapiente placeat nulla unde voluptate
+    praesentium temporibus,
+    debitis dolorum, distinctio
+    ipsam vitae repudiandae consequatur illum minima? Labore eos libero nobis rerum qui ipsum est pariatur saepe voluptatum quia, sapiente, modi velit, ad et quaerat non? Rem.</p>
+<p>Dignissimos accusantium asperiores expedita velit, provident a nisi veritatis consectetur, dolorum neque eveniet dolorem iusto repellendus vero necessitatibus dolore modi quibusdam, officia illo? Inventore pariatur eligendi vero, libero saepe, iste commodi atque facilis
+    ducimus voluptatem alias impedit mollitia aut iure voluptatibus delectus consequatur. <strong>Aliquam nulla maxime ipsum temporibus sed? Dicta eligendi nihil nisi repudiandae magnam ad, quisquam voluptatum repellendus beatae pariatur? Amet nemo placeat consequatur numquam
+        suscipit minus sed.</strong> Consequatur eveniet nostrum corporis ad numquam odio et eos nam omnis dignissimos? Nostrum, illo! Recusandae maxime est, ab quos error quibusdam tempore soluta quisquam, beatae cupiditate, odio officiis nihil obcaecati ipsa?</p>
+<p>Molestiae, porro culpa delectus vero nihil rem perspiciatis quasi, reprehenderit atque animi doloribus quo iste officia consequuntur dolore ullam impedit consequatur voluptatibus explicabo, maxime veritatis. Repudiandae mollitia autem natus harum animi, suscipit voluptatum
+    nobis veniam recusandae qui nisi praesentium illo ad molestiae eligendi? nobis veniam recusandae qui nisi praesentium illo ad molestiae eligendi?
+    </q> <cite>--At, optio</cite>. Ea debitis totam ducimus. <strong>
+        Quia eos inventore harum officiis porro maxime ex facere reprehenderit provident hic et, vitae repellat corporis dignissimos odio consequuntur qui rerum tempora
+        distinctio, voluptate dolor?</strong> Facilis reiciendis assumenda nostrum deserunt dolore ducimus cum nihil ratione cumque, officia, doloremque omnis repudiandae. Omnis doloremque saepe harum mollitia praesentium. Facere at debitis eveniet magnam!</p>
+<p>Saepe pariatur nostrum, libero incidunt nulla ipsam sit! Veniam, eos. Beatae, nihil voluptates. <strong>Fugit ea ratione iusto reiciendis voluptatibus dicta, corrupti ipsa, voluptatum maxime qui ullam aliquid enim reprehenderit dolor laudantium magnam! Hic beatae, voluptatem
+        corrupti.</strong>
+    <q>Eius, iure dolor molestiae et veritatis vero nulla debitis expedita molestias delectus quam non nesciunt, facere alias at magnam numquam facilis cum soluta!</q> <cite>--Ipsam ad sequi</cite> deleniti alias aut nihil labore error architecto eaque, ex non, dolore ab et?
+    Distinctio quidem ipsam
+    rem illo alias. Dolores rem autem beatae, eaque quam similique nemo deserunt expedita amet quos distinctio praesentium architecto! Quo repellat nihil quam.</p>
+
+<!-- inicia ilustración del artículo -->
+<figure>
+    <img src="" alt="ilustracion 1º artículo" height="auto" width="auto">
+    <figcaption>Texto de descripción de mi ilustración.</figcaption>
+</figure>
+<!-- termina ilustración del artículo -->
+
+</div>
+<!-- Termina contenido del artículo -->
+
+<footer>
+<!-- Datos del autor -->
+<div>
+    <span>Nombre del autor</span> <a href="https://www.instagram.com/rodrigo_espinosaq/" target="_blank">@rodrigo.espinosaq</a>
+</div>
+<!-- fin datos del autor -->
+<!-- bibliografía -->
+<blockquote>
+    <p>Cita correctamente hecha.</p>
+</blockquote>
+<!-- fin bibliografía -->
+</footer>
+</article>
+<!-- fin entrada: investigación -->
+
+</main>
+<!-- termina contenido principal -->
+
+<!-- empieza barra lateral -->
+<aside>
+
+</aside>
+<!-- termina barra lateral -->
+
+<!-- empieza el footer -->
+<footer>
+<div>
+<span>Nombre persona 1</span>
+</div>
+<div>
+<span>Blog creado en <i>nombre de tu colegio</i>.</span>
+<span>Las opiniones contenidas en este proyecto pertenecen a los autores de cada entrada.</span>
+</div>
+<div>
+<span>Nombre persona 2</span>
+</div>
+
+</footer>
+<!-- termina el footer -->
+</section>
+<!--termina mi blog-->
+</body>
+
+</html>
