--- a/Root/tema1.html
+++ b/Root/tema1.html
@@ -14,16 +14,20 @@
 
     <body> <!-- Aquí va lo que se muestra en el documento/empieza mi blog-->
 <nav>
-1.
-2.
-3.
-4.
-5.
-6. Airbus A380-800 : Alas de Águila
-7.Buckminster Fuller : Tensegrity
-8. Jiro Horikoshi : Espina de pesacado
-9. Joseph Paxon : Crystal Palace
-10.Robert Hooke : Catenaria
+    <ol reversed>>
+
+<li>1.</li>
+<li>2.</li>
+<li>3.</li>
+<li>4.</li>
+<li>5.</li>
+<li>6. Airbus A380-800 : Alas de Águila</li>
+<li>7.Buckminster Fuller : Tensegrity</li>
+<li>8. Jiro Horikoshi : Espina de pesacado</li>
+<li>9. Joseph Paxon : Crystal Palace</li>
+<li>10.Robert Hooke : Catenaria</li>
+
+    </ol>
 </nav>
 <section> <!-- empieza el título de mi blog-->
 
