--- a/tema1.html
+++ b/tema1.html
@@ -29,7 +29,7 @@
 
     <header>
 
-        <h1> <img src= "Assets/Images/ArbolTelaraña.jpg" alt="love" height="auto" width="auto">Naturaleza, Biomimética e ingeniería</h1>
+        <h1> <img src= "Assets/Images/ArbolTelaraña.jpg" alt="love" height="50" width="auto">Naturaleza, Biomimética e ingeniería</h1>
 
     </header> <!-- termina el título de mi blog-->
 
@@ -39,7 +39,7 @@
             <header>
                 <hgroup>
                     <!--título del artículo-->
-                    <h2> <img src= "Assets/Images/Colibri.jpg" alt="Arbol" height="auto" width="auto"> Naturaleza e Ingeniería</h2>
+                    <h2> <img src= "Assets/Images/Colibri.jpg" alt="Arbol" height="50" width="auto"> Naturaleza e Ingeniería</h2>
                     <!--fecha-->
                     <h4> 09/11/21 </h4>
                 </hgroup>
