--- a/tema2.html
+++ b/tema2.html
@@ -14,11 +14,21 @@
 
     <body> <!-- Aquí va lo que se muestra en el documento/empieza mi blog-->
 
+        <nav>
+            <ul>
+                <li><a class="resaltado" href="index.html" target="_blank"> Principal </a> </li>
+        
+                <li><a class="resaltado" href="tema1.html"> Tema 1 </a></li>
+        
+                <li><a class="resaltado" href="tema2.html"> Tema 2 </a></li>
+            </ul>
+        </nav>
+
 <section> <!-- empieza el título de mi blog-->
 
-    <header>
+    <header Id="titulo_del_blog">
 
-        <h1> <img src= "Assets/Images/Fractal.jpg" alt="Langosta" height="auto" width="auto"> Naturaleza, Biomimética e ingeniería</h1>
+        <h1> <img src= "Assets/Images/Fractal.jpg" alt="Langosta" height="50" width="auto"> Naturaleza, Biomimética e ingeniería</h1>
 
     </header> <!-- termina el título de mi blog-->
 
@@ -28,7 +38,7 @@
             <header>
                 <hgroup>
                     <!--título del artículo-->
-                    <h2> <img src= "Assets/Images/FrutaDeDragón.jpg" alt="ingeniero" height="auto" width="auto"> Naturaleza e Ingeniería</h2>
+                    <h2> <img src= "Assets/Images/FrutaDeDragón.jpg" alt="ingeniero" height="50" width="auto"> Naturaleza e Ingeniería</h2>
                     <!--fecha-->
                     <h4> 09/11/21 </h4>
                 </hgroup>
@@ -39,7 +49,7 @@
                 <h3> Contexto </h3>
 
                 <figure>
-                    <img src="Assets/Images/Hormiga.jpg" alt=”Billar” height=”auto” width=”auto”>
+                    <img src="Assets/Images/Hormiga.jpg" alt=”Billar” height=”50” width=”auto”>
                     <figcaption>  Texto de descrición </figcaption>
                 </figure>
 
@@ -58,7 +68,7 @@
                 <h3> Desarrollo </h3>
 
                 <figure>
-                    <img src="Assets/Images/Picos.jpg" alt=”Caza” height=”auto” width=”auto”>
+                    <img src="Assets/Images/Picos.jpg" alt=”Caza” height=”100” width=”auto”>
                     <figcaption>  Texto de descrición </figcaption>
                 </figure>
 
