--- a/tema1.html
+++ b/tema1.html
@@ -16,18 +16,18 @@
 
     <body> <!-- Aquí va lo que se muestra en el documento/empieza mi blog-->
 <nav>
+    <ul>
+        <li><a class="resaltado" href="index.html" target="_blank"> Principal </a> </li>
 
-    <li><a href="index.html" target="_blank"> Principal </a> </li>
+        <li><a class="resaltado" href="tema1.html"> Tema 1 </a></li>
 
-    <li><a href="tema1.html"> Tema 1 </a></li>
-
-    <li><a href="tema2.html"> Tema 2 </a></li>
-
+        <li><a class="resaltado" href="tema2.html"> Tema 2 </a></li>
+    </ul>
 </nav>
 
 <section> <!-- empieza el título de mi blog-->
 
-    <header>
+    <header Id="titulo_del_blog">
 
         <h1> <img src= "Assets/Images/ArbolTelaraña.jpg" alt="love" height="50" width="auto">Naturaleza, Biomimética e ingeniería</h1>
 
