--- a/tema1.html
+++ b/tema1.html
@@ -130,6 +130,13 @@
 
                 <blockquote> Word. El video. Editorial. Lugar. Año. Página </blockquote>
 
+                <figure>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/hsXQm5aYtCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <figcaption> Autor: Rodrigo Espinosa  </figcaption>
+                </figure>
+
+                <blockquote> Unidas, O. d. (s.f.). un.org. Obtenido de un.org: https://www.un.org/es/about-us/universal-declaration-of-human-rights</blockquote>
+
             </div>
             <!--termina contenido del artículo-->
 
