--- a/tema2.html
+++ b/tema2.html
@@ -48,11 +48,6 @@
             <div>
                 <h3> Contexto </h3>
 
-                <figure>
-                    <img src="Assets/Images/Hormiga.jpg" alt=”Billar” height=”50” width=”auto”>
-                    <figcaption>  Texto de descrición </figcaption>
-                </figure>
-
                 <p> Quiero compartir un tema que me llama mucho la atención, la ingeniería. La ingeniería es el arte y técnica de aplicar los conocimientos científicos a la invención, diseño, perfeccionamiento y manejo de nuevos procedimientos en la industria y otros campos de aplicación científicos. En este caso quiero hablar espcíficamente de casos en los que han surgido proyectos en los que el ingeniero se inspiró en la naturaleza o en algún concepto o conocimiento que surgió a partir de ella y que posteriormente se utilizó para crear algo.</p> <!--aquí va lo que vas a decir-->
 
                     <h4> Investigación </h4> <!-- SUBTÍTULO? PREGUNTA A JC -->
@@ -64,6 +59,15 @@
                     </p>
 
                     <blockquote> Word. El video.Editorial. Lugar. Año. Página </blockquote>
+
+                    <figure>
+                        <img src="Assets/Images/Hormiga.jpg" alt=”Billar” height=”50” width=”auto”>
+                        <figcaption>  Texto de descrición </figcaption>
+                    </figure>
+
+                </article>    
+
+                <article>
 
                 <h3> Desarrollo </h3>
 
@@ -84,6 +88,10 @@
                     </p>
 
                     <blockquote> Word. El video.Editorial. Lugar. Año. Página </blockquote>
+
+                </article>
+
+                <article>
 
                 <h3> Motivación</h3>
 
