--- a/tema1.html
+++ b/tema1.html
@@ -68,7 +68,7 @@
                     El Zero, cuyo primer vuelo tuvo lugar en 1939, era extremadamente ágil y ligero, con una maniobrabilidad y autonomía superiores a cualquier otro caza del mundo en su época. El Zero fue superior a todos los cazas aliados durante los primeros dos años de la guerra. Sin embargo, para lograr estos resultados, los ingenieros japoneses tuvieron que sacrificar la durabilidad. El Zero poseía una construcción muy ligera, carecía de blindaje y tanque de combustible autosellante. Según el escritor estadounidense Jim Rearden, «el Zero era probablemente el avión más fácil de derribar cuando era dañado... Los japoneses... no estaban preparados o no eran capaces de construir cazas más avanzados en la cantidad requerida para lidiar con el creciente número y calidad de los cazas estadounidenses». Como resultado, el Zero fue el caza principal de la Armada Imperial Japonesa en la guerra, durante la cual solo se fabricaron aproximadamente 10 500 unidades. </p> <!--aquí va lo que vas a decir-->
 
                     <figure>
-                        <img src="Assets/Images/Dienteleon.jpg" alt="" height="30px" width="auto">
+                        <img src="Assets/Images/Dienteleon.jpg" alt="" height="100px" width="auto">
                         <figcaption>  Texto de descrición </figcaption>
                     </figure>
 
@@ -93,7 +93,7 @@
                     <header>
                         <hgroup>
                             <!--título del artículo-->
-                            <h2> <img src= "Assets/Images/Colibri.jpg" alt="Arbol" height="50" width="auto"> Naturaleza e Ingeniería</h2>
+                            <h2> <img src= "Assets/Images/Edificio.jpg" alt="love" height="50" width="auto"> Estructuras</h2>
                             <!--fecha-->
                             <h4> 09/11/21 </h4>
                         </hgroup>
@@ -150,7 +150,7 @@
                     <header>
                         <hgroup>
                             <!--título del artículo-->
-                            <h2> <img src= "Assets/Images/Colibri.jpg" alt="Arbol" height="50" width="auto"> Naturaleza e Ingeniería</h2>
+                            <h2> <img src= "Assets/Images/FrutaDeDragón.jpg" alt="Arbol" height="50" width="auto"> Biomimética</h2>
                             <!--fecha-->
                             <h4> 09/11/21 </h4>
                         </hgroup>
@@ -173,13 +173,11 @@
 
                     </div>
 
-                </article>
-
                 <h3> Motivación</h3>
 
                 <figure>
                     <img src="Assets/Images/Estructura.jpg" alt="loop" height=”auto” width=”auto”>
-                    <figcaption>  Texto de descrición </figcaption>
+                    <figcaption>  Me llaman mucho la atención los fenómenos físicos y la idea de poder tomar a la naturaleza como inspiración para consttruir y diseñar objetos útiles, por eso elegí este tema. </figcaption>
                 </figure>
 
                 <p> Me llaman mucho la atención los fenómenos físicos y la idea de poder tomar a la naturaleza como inspiración para consttruir y diseñar objetos útiles, por eso elegí este tema.</p> <!--aquí va lo que vas a decir-->
@@ -188,6 +186,10 @@
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/ZmlwF_zAeVw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <figcaption> Autor: Matrix Repatterning  </figcaption>
                 </figure>
+
+            </article>
+
+        <article>
 
                 <h4> Investigación </h4> <!-- SUBTÍTULO? PREGUNTA A JC -->
 
