--- a/tema2.html
+++ b/tema2.html
@@ -153,7 +153,7 @@
 
 </aside> <!--termina barra lateral-->
 
-<footer> <!--empieza el footer-->
+<footer class="love"> <!--empieza el footer-->
 
     <div> 
         <span> Daniel Ramírez de la Garza </span>
