--- a/tema1.html
+++ b/tema1.html
@@ -252,7 +252,7 @@
             <header>
                 <hgroup>
                     <!--título del artículo-->
-                    <h2> <img src= "Assets/Images/Fractal.jpg" alt="Arbol" height="50" width="auto">Tensegrity</h2>
+                    <h2> <img src= "Assets/Images/corazon.jpeg" alt="Arbol" height="50" width="auto">Tensegrity</h2>
                     <!--fecha-->
                     <h4> 09/11/21 </h4>
                 </hgroup>
@@ -280,7 +280,7 @@
                     El Zero, cuyo primer vuelo tuvo lugar en 1939, era extremadamente ágil y ligero, con una maniobrabilidad y autonomía superiores a cualquier otro caza del mundo en su época. El Zero fue superior a todos los cazas aliados durante los primeros dos años de la guerra. Sin embargo, para lograr estos resultados, los ingenieros japoneses tuvieron que sacrificar la durabilidad. El Zero poseía una construcción muy ligera, carecía de blindaje y tanque de combustible autosellante. Según el escritor estadounidense Jim Rearden, «el Zero era probablemente el avión más fácil de derribar cuando era dañado... Los japoneses... no estaban preparados o no eran capaces de construir cazas más avanzados en la cantidad requerida para lidiar con el creciente número y calidad de los cazas estadounidenses». Como resultado, el Zero fue el caza principal de la Armada Imperial Japonesa en la guerra, durante la cual solo se fabricaron aproximadamente 10 500 unidades. </p> <!--aquí va lo que vas a decir-->
 
                     <figure class="ilustracion">
-                        <img src="Assets/Images/Dienteleon.jpg" alt="" height="100px" width="auto">
+                        <img src="Assets/Images/melon.jpeg" alt="" height="100px" width="auto">
                         <figcaption class="ilustracion figcaption">  Texto de descrición </figcaption>
                     </figure>
 
