--- a/tema1.html
+++ b/tema1.html
@@ -125,7 +125,7 @@
                     </p>
 
                     <figure class="ilustracion">
-                        <img src="Assets/Images/Edificio.jpg" alt=”Avion” height=”auto” width=”auto”>
+                        <img src="Assets/Images/Edificio.jpg" alt=”Avion” height=”50px” width=”auto”>
                         <figcaption class="ilustracion figcaption">  Texto de descrición </figcaption>
                     </figure>
 
@@ -302,7 +302,12 @@
 
         </article>
     
-
+        <article>
+            <figure class="ilustracion">
+                <img src="Assets/Images/Meme JC.jpg" alt="" height="100px" width="auto">
+                <figcaption class="ilustracion figcaption">  Texto de descrición </figcaption>
+            </figure>
+        </article>
 
     </main> <!-- termina contenido principal-->
 
