--- a/tema2.html
+++ b/tema2.html
@@ -263,6 +263,13 @@
 
         </article>
 
+        <article>
+            <figure class="ilustracion">
+                <img src="Assets/Images/Meme JC.jpg" alt="" height="100px" width="auto">
+                <figcaption class="ilustracion figcaption">  Texto de descrición </figcaption>
+            </figure>
+        </article>
+
     </main> <!-- termina contenido principal-->
 
 <aside> <!--empieza barra lateral-->
