--- a/tema1.html
+++ b/tema1.html
@@ -311,7 +311,7 @@
 
     </main> <!-- termina contenido principal-->
 
-<aside> <!--empieza barra lateral-->
+<aside class="alado"> <!--empieza barra lateral-->
     <h2>Microblogging</h2>
 
         <div> 
