--- a/tema2.html
+++ b/tema2.html
@@ -272,7 +272,7 @@
 
     </main> <!-- termina contenido principal-->
 
-<aside> <!--empieza barra lateral-->
+<aside class="alado"> <!--empieza barra lateral-->
 
     <h2>Microblogging</h2>
 
