--- a/tema2.html
+++ b/tema2.html
@@ -87,7 +87,7 @@
                 <h3> Desarrollo </h3>
 
                 <figure class="ilustracion">
-                    <img src="Assets/Images/Picos.jpg" alt=”Caza” height=”100” width=”auto”>
+                    <img src="Assets/Images/Picos.jpg" alt=”Caza” height=”50px” width=”auto”>
                     <figcaption class="ilustracion figcaption">  Texto de descrición </figcaption>
                 </figure>
 
