--- a/tema1.html
+++ b/tema1.html
@@ -22,6 +22,10 @@
         <li><a class="resaltado" href="tema1.html"> Tema 1 </a></li>
 
         <li><a class="resaltado" href="tema2.html"> Tema 2 </a></li>
+
+        <li><a class="resaltado" href="tema2.html"> Tema 3 </a></li>
+
+        <li><a class="resaltado" href="tema2.html"> Tema 4 </a></li>
     </ul>
 </nav>
 
