--- a/tema2.html
+++ b/tema2.html
@@ -21,6 +21,11 @@
                 <li><a class="resaltado" href="tema1.html"> Tema 1 </a></li>
         
                 <li><a class="resaltado" href="tema2.html"> Tema 2 </a></li>
+
+                <li><a class="resaltado" href="tema2.html"> Tema 3 </a></li>
+
+                <li><a class="resaltado" href="tema2.html"> Tema 4 </a></li>
+                
             </ul>
         </nav>
 
