--- a/tema2.html
+++ b/tema2.html
@@ -33,7 +33,7 @@
 
     <header Id="titulo_del_blog">
 
-        <h1> <img src= "Assets/Images/Fractal.jpg" alt="Langosta" height="50" width="auto"> Naturaleza, Biomimética e ingeniería</h1>
+        <h1> <img src= "Assets/Images/Fractal.jpg" alt="Langosta" height="50" width="auto"> Biomimética </h1>
 
     </header> <!-- termina el título de mi blog-->
 
