--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 
 </head>
 
+    <section>
+
+        <h1> <img src= "Assets/Images/Colibri.jpg" alt="love" height="50" width="auto">Naturaleza, Biomimética e ingeniería</h1>
+
+    </section>
     
 <body>
 
