--- a/tema1.html
+++ b/tema1.html
@@ -19,7 +19,7 @@
     <ul>
         <li><a class="resaltado" href="index.html" target="_blank"> Principal </a> </li>
 
-        <li><a class="resaltado" href="tema1.html"> Tema 1 </a></li>
+        <li><a  href="tema1.html"> Tema 1 </a></li>
 
         <li><a class="resaltado" href="tema2.html"> Tema 2 </a></li>
 
@@ -283,6 +283,7 @@
                 <p> En esta primer entrega del blog quiero hablar de la historia del cómo se diseño el caza Mitsubishi A6M Zero. Mitsubishi A6M Zero (o Zeke): fue un avión de caza de combate embarcado japonés, que voló tanto para el ejército imperial, como para el servicio aéreo de la marina imperial, durante la Segunda Guerra Mundial. El Mitsubishi A6M zero era un avión que inicialmente sorprendió a los pilotos aliados que combatieron contra él en el océano pacífico. Inicialmente la versión A6M2 montaba un motor de pocos kilovatios para las potencias manejadas por aviones de caza de esos años. Sin embargo era un avión muy ligero y por tanto su relación potencia a peso era excelente.
                     El Zero, cuyo primer vuelo tuvo lugar en 1939, era extremadamente ágil y ligero, con una maniobrabilidad y autonomía superiores a cualquier otro caza del mundo en su época. El Zero fue superior a todos los cazas aliados durante los primeros dos años de la guerra. Sin embargo, para lograr estos resultados, los ingenieros japoneses tuvieron que sacrificar la durabilidad. El Zero poseía una construcción muy ligera, carecía de blindaje y tanque de combustible autosellante. Según el escritor estadounidense Jim Rearden, «el Zero era probablemente el avión más fácil de derribar cuando era dañado... Los japoneses... no estaban preparados o no eran capaces de construir cazas más avanzados en la cantidad requerida para lidiar con el creciente número y calidad de los cazas estadounidenses». Como resultado, el Zero fue el caza principal de la Armada Imperial Japonesa en la guerra, durante la cual solo se fabricaron aproximadamente 10 500 unidades. </p> <!--aquí va lo que vas a decir-->
 
+                    <meter value="0.7"></meter>
                     <figure class="ilustracion">
                         <img src="Assets/Images/melon.jpeg" alt="" height="100px" width="auto">
                         <figcaption class="ilustracion figcaption">  Texto de descrición </figcaption>
