--- a/tema2.html
+++ b/tema2.html
@@ -92,7 +92,7 @@
                 <h3> Desarrollo </h3>
 
                 <figure class="ilustracion">
-                    <img src="Assets/Images/Picos.jpg" alt=”Caza” height=”50px” width=”auto”>
+                    <img src="Assets/Images/Picos.jpg" alt="Caza" height="auto" width="300px">
                     <figcaption class="ilustracion figcaption">  Texto de descrición </figcaption>
                 </figure>
 
