--- a/tema4.html
+++ b/tema4.html
@@ -33,7 +33,7 @@
 
     <header Id="titulo_del_blog">
 
-        <h1> <img src= "Assets/Images/corriendo.jpg" alt="love" height="50" width="auto">mis jugadores favoritos/h1>
+        <h1> <img src= "Assets/Images/corriendo.jpg" alt="love" height="50" width="auto">mis jugadores favoritos </h1>
 
     </header> <!-- termina el título de mi blog-->
 
@@ -315,7 +315,7 @@
 
     </main> <!-- termina contenido principal-->
 
-<aside> <!--empieza barra lateral-->
+<aside class="alado"> <!--empieza barra lateral-->
     <h2>Microblogging</h2>
 
         <div> 
