--- a/tema4.html
+++ b/tema4.html
@@ -129,7 +129,7 @@
                     </p>
 
                     <figure class="ilustracion">
-                        <img src="Assets/Images/escuchando.jpg" alt=”Avion” height=”50px” width=”auto”>
+                        <img src="Assets/Images/escuchando.jpg" alt=”Avion” height="200px" width="auto">
                         <figcaption class="ilustracion figcaption">  Texto de descrición </figcaption>
                     </figure>
 
