--- a/tema3.html
+++ b/tema3.html
@@ -193,7 +193,7 @@
                 <p> Me llaman mucho la atención los fenómenos físicos y la idea de poder tomar a la naturaleza como inspiración para consttruir y diseñar objetos útiles, por eso elegí este tema.</p> <!--aquí va lo que vas a decir-->
 
                 <figure class="ilustracion">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ZmlwF_zAeVw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://youtu.be/xSIBqNgiSuQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <figcaption class="ilustracion figcaption"> Autor: Matrix Repatterning  </figcaption>
                 </figure>
 
@@ -226,8 +226,8 @@
                 <blockquote> Word. El video. Editorial. Lugar. Año. Página </blockquote>
 
                 <figure class="ilustracion">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/hsXQm5aYtCU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    <figcaption class="ilustracion figcaption"> Autor: Rodrigo Espinosa  </figcaption>
+                    <iframe width="560" height="315" src="https://youtu.be/xSIBqNgiSuQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <figcaption class="ilustracion figcaption"> Autor: Daniel Ramírez  </figcaption>
                 </figure>
 
                 <blockquote> Unidas, O. d. (s.f.). un.org. Obtenido de un.org: https://www.un.org/es/about-us/universal-declaration-of-human-rights</blockquote>
@@ -256,7 +256,7 @@
             <header>
                 <hgroup>
                     <!--título del artículo-->
-                    <h2> <img src= "Assets/Images/corazon.jpeg" alt="Arbol" height="50" width="auto">Tensegrity</h2>
+                    <h2> <img src= "Assets/Images/meme daniel.jpg" alt="Arbol" height="50" width="auto">Tensegrity</h2>
                     <!--fecha-->
                     <h4> 09/11/21 </h4>
                 </hgroup>
@@ -308,7 +308,7 @@
     
         <article>
             <figure class="ilustracion">
-                <img src="Assets/Images/corazon.jpeg" alt="" height="100px" width="auto">
+                <img src="Assets/Images/meme daniel.jpg" alt="" height="100px" width="auto">
                 <figcaption class="ilustracion figcaption">  Texto de descrición </figcaption>
             </figure>
         </article>
