--- a/tema1.html
+++ b/tema1.html
@@ -19,7 +19,7 @@
     <ul>
         <li><a class="resaltado" href="index.html" target="_blank"> Principal </a> </li>
 
-        <li><a  href="tema1.html"> Tema 1 </a></li>
+        <li><a class="resaltado" href="tema1.html"> Tema 1 </a></li>
 
         <li><a class="resaltado" href="tema2.html"> Tema 2 </a></li>
 
